# YarikChatModBot

./: .dockerignore  .env.example  .gitignore  Containerfile  banned_phrases.json  deploy  latin2cyrillic.json  main.py  pyproject.toml  requirements.txt  valid_chats.json
deploy/: main
utils/: config.py  database.py  logging.py  misc.py
