[project]
name = "YarikChatModBot"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.26",
  "dotenv>=0.9.9",
  "levenshtein>=0.27.3",
  "unidecode>=1.4",
]

[tool.ruff]
target-version = "py311"
line-length = 79
indent-width = 4
lint.select = [
  "A",
  "ARG",
  "ASYNC",
  "B",
  "C4",
  "C90",
  "COM",
  "DOC",
  "DTZ",
  "E",
  "F",
  "FLY",
  "I",
  "LOG",
  "N",
  "PERF",
  "PIE",
  "PL",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "UP",
  "W",
]
lint.ignore = [ "SIM108" ]
lint.isort.length-sort = true
lint.pycodestyle.max-doc-length = 72
